# book-index

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
book_index/: __main__.py  char_parser.py  index.py
books/: lorem  nowomowa  star-wars
tests/: test_index.py
