[tool.poetry]
name = "book-index"
version = "0.1.0"
description = ""
authors = ["Coding Dojo Silesia"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
importlib-metadata = "2.0.0"
pytest = "^6.1.1"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
